Push minimized file to Github.

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@
 ######################
 # Bower
 ######################
-bower_components/**
-dist/**
+bower_components/
 
 ######################
 # Node
