Removendo pacote de fontes não utilizado. Ajustando dados do repositório de acesso a lib.

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
                 <snapshotRepository>
                     <id>snapshots</id>
                     <name>artifactory.cronapp.io-snapshots</name>
-                    <url>https://artifactory.cronapp.io/libs-snapshot</url>
+                    <url>https://artifactory.cronapp.io/public-snapshot</url>
                 </snapshotRepository>
             </distributionManagement>
             <properties>
@@ -89,7 +89,7 @@
                 <repository>
                     <id>central</id>
                     <name>artifactory.cronapp.io-releases</name>
-                    <url>https://artifactory.cronapp.io/libs-release</url>
+                    <url>https://artifactory.cronapp.io/public-release</url>
                 </repository>
             </distributionManagement>
             <properties>
