--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
                 </snapshotRepository>
             </distributionManagement>
             <properties>
-                <project.version>0.0.1-SNAPSHOT</project.version>
+                <project.version>0.0.2-SNAPSHOT</project.version>
             </properties>
         </profile>
         <profile>
@@ -104,9 +104,9 @@
             <version>1.8</version>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
