--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <version>1.3.5.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>1.3.5.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
