--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.core</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
