--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
             <artifactId>org.eclipse.persistence.core</artifactId>
             <version>2.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.antlr</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
