--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "cronapi-js",
-  "version": "0.0.41-develop",
+  "version": "0.0.42-beta",
   "homepage": "https://github.com/technecloud/cronapi-js",
   "authors": [
     "Arthemus Cicotti Moreira <arthemus.moreira@gmail.com>"
