--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "cronapi-js",
-  "version": "0.0.42-develop",
+  "version": "0.0.43-beta",
   "homepage": "https://github.com/technecloud/cronapi-js",
   "authors": [
-    "Arthemus Cicotti Moreira <arthemus.moreira@gmail.com>"
+    "Cronapp <suporte@cronapp.io>"
   ],
   "description": "Public library for CronApp's users",
   "main": "cronapi.js",
