--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,16 @@
             <version>2.1.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.22.0-GA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
