--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
             <artifactId>eclipselink</artifactId>
             <version>2.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.2</version>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
