--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,18 @@
             <artifactId>jjwt</artifactId>
             <version>0.2</version>
         </dependency>
+        <dependency>
+            <groupId>io.cronapp</groupId>
+            <artifactId>cronapp-reports-exec</artifactId>
+            <version>0.0.1-report</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>*</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
