--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cronapi-js",
-  "version": "0.0.78-d-s-b",
+  "version": "0.0.79-d-s",
   "description": "Public library for CronApp's users",
   "main": "cronapi.js",
   "scripts": {
