QAIBT-1908 Ao chamar um bloco servidor a partir do botão, não mostra msg de erro

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-util": "^3.0.8"
   },
   "dependencies": {
-    "gulp-cli": "^2.2.0"
+    "gulp-cli": "^2.2.0",
+    "natives": "^1.1.6"
   }
 }
