CRONAPP-2745 - Ampliar a cobertura de Testes - Categoria UTIL
https://cronapp.atlassian.net/browse/CRONAPP-2745

Problema:
Não existe cobertura de testes na categoria Util
Melhoria:
Necessidade de desenvolver testes unitários para aumentar a qualidade
Solução:
Desenvolvido testes unitários coom JEST e Chai nas funções da categoria Util

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "jquery": "^2.1.4"
   },
   "dependencies": {
     "natives": "1.1.6"
