CRONAPP-3421 - Criar recurso para autenticação OAuth2 em projetos Mobile
Solução
Added build script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Public library for CronApp's users",
   "main": "cronapi.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
